--- a/contactsales.html
+++ b/contactsales.html
@@ -14,7 +14,7 @@
 
 	<!-- Start of navbar -->
 		<nav class="navbar navbar-expand-lg navbar-white bg-white">
-		  <a class="navbar-brand" href="#"><img src="img/logo.png" alt="logo" class="logo-img"></a>
+		  <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo" class="logo-img"></a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -41,8 +41,8 @@
 		        <a class="nav-link " href="#">Support</a>
 		      </li>
 		    </ul>
-		    <a class="nav-link " href="#">Contact Sales</a>
-		    <a class="nav-link " href="#">Login</a>
+		    <a class="nav-link " href="contactsales.html">Contact Sales</a>
+		    <a class="nav-link " href="signin.html">Login</a>
 		    <form class="form-inline my-2 my-lg-0">
 		      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Try for free</button>
 		    </form>
