--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 		        <a class="nav-link " href="#">Support</a>
 		      </li>
 		    </ul>
-		    <a class="nav-link " href="#">Contact Sales</a>
-		    <a class="nav-link " href="#">Login</a>
+		    <a class="nav-link " href="contactsales.html">Contact Sales</a>
+		    <a class="nav-link " href="signin.html">Login</a>
 		    <form class="form-inline my-2 my-lg-0">
 		      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Try for free</button>
 		    </form>
